--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 
     <head>
         <meta charset="UTF-8">
-        <script src="rps.js"></script>
+        <script src="rps.js" defer></script>
     </head>
 
     <body>
-
+        <button id="rock">Rock</button>
+        <button id="paper">Papers</button>
+        <button id="scissors">Scissors</button>
     </body>
 
 </html>
