Create div that contains the button elements

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     </head>
 
     <body>
-        <button id="rock">Rock</button>
-        <button id="paper">Papers</button>
-        <button id="scissors">Scissors</button>
+        <div class="rpsButtons">
+            <button id="rock">Rock</button>
+            <button id="paper">Papers</button>
+            <button id="scissors">Scissors</button>
+        </div>
+        
     </body>
 
 </html>
