Create div that contains results of the round

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
             <button id="paper">Papers</button>
             <button id="scissors">Scissors</button>
         </div>
+
+        <div class="rpsResults">
+            <h1>Round results</h1>
+            <p id="resultText">No rounds have been played yet.</p>
+        </div>
         
     </body>
 
