Create and display score for player and computer

--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
         </div>
 
         <div class="rpsResults">
-            <h1>Round results</h1>
+            <h2>Results for this round:</h2>
             <p id="resultText">No rounds have been played yet.</p>
+            <h1>Running score</h1>
+            <p>Player</p>
+            <p id="playerScoreText">0</p>
+            <p>Computer</p>
+            <p id="computerScoreText">0</p>
+
         </div>
         
     </body>
