--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <head>
         <meta charset="UTF-8">
         <script src="rps.js" defer></script>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
+        <div class="headerClass">
+            <h1>Rock, Paper, Scissors</h1>
+        </div>
+
         <div class="rpsButtons">
             <button id="rock">Rock</button>
             <button id="paper">Papers</button>
@@ -22,7 +27,6 @@
             <p id="playerScoreText">0</p>
             <p>Computer</p>
             <p id="computerScoreText">0</p>
-
         </div>
         
     </body>
